# vc1

./: .gitignore  CMakeLists.txt  featureDetection.cpp  featureDetection.hpp  histogram.cpp  histogram.hpp  homography.cpp  homography.hpp  main.cpp  matching.cpp  matching.hpp  stitching.cpp  stitching.hpp
DistancesForHistogram/: akazeDistances.txt  orbDistances.txt
